--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,24 @@
+// tsconfig.json
 {
-  "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  // NO "extends" line
+  "compilerOptions": {
+    // --- Add noEmit ---
+    "noEmit": true, // Tell tsc not to output compiled JS files
+    // ----------------
+
+    "types": ["node"],
+    "esModuleInterop": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "checkJs": false,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  }
+  // include/exclude if needed
 }
